fix: gitalk popup z-index

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -53,6 +53,27 @@ main {
 .medium-zoom-image.medium-zoom-image--opened {
   z-index: 5;
 }
+/* gitalk */
+.gitalk-container {
+  z-index: 1;
+}
+.gt-container {
+  z-index: 1;
+  .gt-header,
+  .gt-comments {
+    z-index: 1;
+  }
+  .gt-meta {
+    z-index: 2;
+    .gt-counts,
+    .gt-user {
+      z-index: 1;
+    }
+    .gt-popup {
+      z-index: 2;
+    }
+  }
+}
 
 /* lazyload animation */
 .lazyload,
